--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,11 @@
     		<artifactId>jfoenix</artifactId>
     		<version>8.0.8</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.0</version>
+		</dependency>
+		
 	</dependencies>
 </project>
